[tool.poetry]
name = "enet-keras"
version = "0.1.0"
description = "An implementation of ENet: A Deep Neural Network Architecture for Real-Time Semantic Segmentation, ported from ENet-training (lua-torch) to keras."
authors = ["Pavlos Melissinos <pmelissi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Keras = "2.0.8"
tensorflow = "1.14.0"
Pillow = "6.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
