[tool.poetry]
name = "enet-keras"
version = "0.1.0"
description = "An implementation of ENet: A Deep Neural Network Architecture for Real-Time Semantic Segmentation, ported from ENet-training (lua-torch) to keras."
authors = ["Pavlos Melissinos <pmelissi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
Keras = "2.0.8"
tensorflow-gpu = "1.3.0"
Pillow = "6.2.0"

# Optional dependencies (extras)
torchfile = { version = "0.1.0"}
Cython = { version = "^0.29.14"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
